# Philos4

./: CMakeLists.txt  Makefile  actions.c  memory_management.c  parsing.c  philo.c  philo_utils.c  tests_philo.sh  tests_philo2.sh  tests_philo3.sh  tests_philo4.sh  tests_philo5.sh  tests_philo6.sh
include/: philo.h
